    * [OPENJPA-175] - Eager selects by PagingResultObjectProvider may not use the FetchBatchSize
    * [OPENJPA-179] - Schemas defined in orm.xml are only applied when a name is also specified. 
    * [OPENJPA-181] - ClassCastException when executing bulk delete on an entity that owns a OneToOne with a Cascade.DELETE when DataCache is on
    * [OPENJPA-185] - optional attribute is not overriden by xml descriptor
    * [OPENJPA-186] - Build failure of OpenJPA sources from trunk

** Improvements
    * [OPENJPA-10] - persistence unit name should be default diagnostic context for standard OpenJPA log impl
    * [OPENJPA-37] - Support ant typedefs for OpenJPA tasks
    * [OPENJPA-55] - Allow executeUpdate() invocations on native queries
    * [OPENJPA-57] - persistence_1_0.xsd is missing
    * [OPENJPA-63] - Better pessimistic lock support for DB2 v8.2+
    * [OPENJPA-151] - Added field in enhanced vesrion of a class is not serialized. Hence the change in detached+serialized instances is not registered under certain conditions.  
    * [OPENJPA-153] - WebSphere and non-jta-data-source and default ManagedRuntime
    * [OPENJPA-158] - OpenJPA logs overly-verbose at INFO level
    * [OPENJPA-161] - Overuse of synchronization in AbstractBrokerFactory
    * [OPENJPA-166] - Track the reason why a setRollbackOnly invocation was made
    * [OPENJPA-176] - Exception prefixes should be human-readable
    * [OPENJPA-196] - Ease the restrictions on forcing a matche between the number of declared and assigned positional parameters

** New Features
    * [OPENJPA-92] - Support for H2 Database Engine
    * [OPENJPA-93] - Sequence generation in a JTA environment should not require non-JTA datasource
    * [OPENJPA-94] - Allow MappingTool and persistence.xml to support drop-create for database schema

** Tasks
    * [OPENJPA-36] - Add cwiki url to incubator status page

** Tests
    * [OPENJPA-40] - Testing OpenJPA and Spring integration fails